# Extended-Kalman-Latent-Skill-Model

./: README.md  example.ipynb  example_sim.ipynb  pyproject.toml
ekf/: ekf.py  simulation.py  tennis_data.py
